fixing spacing

--- a/assets/css/extended/resume.css
+++ b/assets/css/extended/resume.css
@@ -4,4 +4,5 @@
 
 .cv-date-range {
     font-style: italic;
+    padding-left: 10px;
 }
